# wasm-self-driving-car

./: .gitignore  Cargo.toml  README.md  index.html  successful_brains.json
lib/: Cargo.toml
lib/src/: car.rs  config.rs  lib.rs  sensors.rs  traffic.rs  utils.rs  visualizer.rs
lib/src/ai/: agents.rs  mod.rs
profiling_results/: wasm-car-3.json  wasm-car-4.json
src/: ai.rs  app.rs  car.rs  controls.rs  helpers.rs  lib.rs  main.rs  road.rs  sensors.rs  traffic.rs  utils.rs  visualizer.rs
src/ai/: agents.rs  mod.rs
tests/: web.rs
www/: .eslintrc.json  .prettierrc.json  bootstrap.js  formHandler.js  helpers.js  index.html  index.js  package-lock.json  package.json  style.css  utils.js  webpack.config.js
www/src/: App.tsx  index.tsx
www/src/components/WorldCanvas/: worldCanvas.tsx
www/src/components/agentsForm/: IAgentsSettings.ts  agentsForm.tsx
www/src/components/rankingTable/: rankingTable.tsx
www/src/components/world/: world.ts
www/src/components/worldFrom/: IWorldSettings.ts  worldForm.tsx
www_old/: formHandler.js
www_old/www/: package.json
