[package]
name = "wasm-self-driving-car"
version = "0.1.0"
authors = ["Vilém Pavlíček <vildapavlicek@gmail.com>"]
edition = "2018"

[dependencies]
ai = { path = "./lib" }
# UI
yew = "0.19"
# data serialization
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
# web related
web-sys = { version = "0.3.58", features = ['CanvasRenderingContext2d',  'Document',  'Element',  'HtmlCanvasElement',  'HtmlElement',  'Window',  'console',  'Storage']}

# logging and panic errors
console_error_panic_hook = "0.1.7"
tracing = "0.1.35"
tracing-wasm = "0.2.1"
tap = "1.0.1"
gloo-storage = "0.2.1"