[package]
name = "wasm-self-driving-car"
version = "0.1.0"
authors = ["Vilém Pavlíček <vildapavlicek@gmail.com>"]
edition = "2018"
rust-version = "1.61.0"
description = "Self-Driving car simulation based on freeCodeCamp's tutorial but in Rust + WASM"

[dependencies]
simulation = { path = "./lib" }
gloo-render = "0.1.1"

# UI
yew = "0.19"
# data serialization
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
# web related
web-sys = { version = "0.3.58", features = ['CanvasRenderingContext2d',  'Document',  'Element',  'HtmlCanvasElement',  'HtmlElement',  'Window',  'console',  'Storage']}

# logging and panic errors
console_error_panic_hook = "0.1.7"
tracing = "0.1.35"
tracing-wasm = "0.2.1"
tap = "1.0.1"



wasm-bindgen = "0.2.63"